# polars_mismatch_dtypes_example_app

./: Cargo.toml  README.md
src/: main.rs
