[package]
name = "mismatch_dtypes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.polars]
version = "0.23.0"
default-features = false
features = [
  "checked_arithmetic",
  "cross_join",
  "cum_agg",
  "decompress",
  "dtype-date",
  "dtype-datetime",
  "fmt",
  "ipc",
  "json",
  "lazy",
  "parquet",
  "performant",
  "rolling_window",
  "rows",
  "simd",
  "sort_multiple",
  "temporal",
  "to_dummies",
]
