[package]
name = "mismatch_dtypes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.polars]
version = "0.23.2"
default-features = false
features = [
  "fmt",
  "lazy",
  "performant",
  "rows",
  "simd",
]
